--- a/app/views/clients/clients/new.html.erb
+++ b/app/views/clients/clients/new.html.erb
@@ -1,18 +1,17 @@
-<div class="big-box">
-	<div>
-		<div class="title">
-			<h2>住所新規登録</h2>
-			<%= flash[:danger] %>
-			<%= form_for @address, :url => {:action => :create} do |f| %>
-				<h4>氏名</h4>
-				<div>
-				<%= f.text_field :last_name %><%= f.text_field :first_name %>
-				<h4>郵便番号(半角英数字 ハイフンあり)</h4>
-				<%= f.text_field :sub_post_code %>
-				<h2>住所</h2>
-				<%= f.text_area :sub_address %>
-				<%= f.submit "追加" %>
-			<% end %>
-		</div>
-	</div>
+<div class="title">
+	<h2 class="space">住所新規登録</h2>
+	<%= flash[:danger] %>
+	<%= form_for @address, :url => {:action => :create} do |f| %>
+	<h4 class="line-height">氏名</h4>
+	<h4 class="line-height">
+		<%= f.text_field :last_name, class:"info-text" %>
+		<%= f.text_field :first_name, class:"info-text" %></h4>
+	<h4 class="line-height">郵便番号(半角英数字 ハイフンあり)</h4>
+	<h4 class="line-height">
+		<%= f.text_field :sub_post_code, class:"info-text" %></h4>
+	<h4 class="line-height">住所</h4>
+	<h4 class="line-height">
+		<%= f.text_area :sub_address, class:"info-text" %>
+		<%= f.submit "追加", class:'btn btn-warning active' %>
+		<% end %></h4>
 </div>
