--- a/app/views/clients/clients/show.html.erb
+++ b/app/views/clients/clients/show.html.erb
@@ -1,14 +1,14 @@
 <div class="show_all">
 <h2>My page<span><h4><%= flash[:client_update] %></h4></span></h2>
-<h4>氏名 <%= @client.last_name %> <%= @client.first_name %></h4>
-<h4>電話番号　<%= @client.telephone%></h4>
-<h4>自宅郵便番号　<%= @client.post_code%></h4>
-<h4>自宅住所　<%= @client.address%></h4>
-<h4>メールアドレス　<%= @client.email%></h4>
+<h4 class="line-height">氏名 <%= @client.last_name %> <%= @client.first_name %></h4>
+<h4 class="line-height">電話番号　<%= @client.telephone%></h4>
+<h4 class="line-height">自宅郵便番号　<%= @client.post_code%></h4>
+<h4 class="line-height">自宅住所　<%= @client.address%></h4>
+<h4 class="line-height">メールアドレス　<%= @client.email%></h4>
 
 <% unless @address == [] %>
 
-<h4>登録住所</h4>
+<h4 class="line-height">登録住所</h4>
 
 <div class="create-address">
 	<h4><!-- 文字の大きさのため、あとでcssで調整 -->
