--- a/app/views/admins/cds/show.html.erb
+++ b/app/views/admins/cds/show.html.erb
@@ -1,5 +1,5 @@
 <div class="title">
-	<h2>商品詳細</h2>
+	<h2 class="space">商品詳細</h2>
 	<div class="show-items">
 		<div class="show-items row">
 			<div class="col-sm-5">
