--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,7 +44,7 @@ h1, h2, h3, h4, h5, h6, p{
   background: -moz-radial-gradient(#51e8df, #51e8df);
   background: -webkit-radial-gradient(#67ffb7, #51e8df);
   background: radial-gradient(#51e864, #51e8df);
-  margin-top: auto;
+  margin-top: 50px;
 }
 
 .cover-box{
@@ -206,4 +206,23 @@ element.style{
     left: 0px;
     background: #fff;
     z-index: 9999;
- }
+  }
+.title{
+  width: 80%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+h2.space{
+  line-height: 1;
+  margin-top: 50px;
+  margin-bottom: 10px;
+}
+
+h4.line-height{
+  line-height: 2;
+}
+
+td{
+  padding: 10px;
+}
