--- a/app/views/admins/cds/edit.html.erb
+++ b/app/views/admins/cds/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="title">
-	<h2>CD編集</h2>
+	<h2 class="space">CD編集</h2>
 	<h5><strong>※数字は半角英数字で記入して下さい</strong></h5>
 	<% if @cd.errors.any? %>
 	  <div id="error_explanation" class="alert alert-danger">
