--- a/app/views/admins/clients/index.html.erb
+++ b/app/views/admins/clients/index.html.erb
@@ -1,5 +1,5 @@
 <div class="title">
-	<h2>顧客一覧</h2>
+	<h2 class="space">顧客一覧</h2>
 	<div class="client-pepple">
 		<% @clients.each do |client| %>
 			<h4 class="client-man"><%= client.id %> . <%= link_to (client.last_name + client.first_name), admins_client_path(client.id) %></h4>
