--- a/app/assets/stylesheets/clients/orders.scss
+++ b/app/assets/stylesheets/clients/orders.scss
@@ -13,10 +13,6 @@
 
 .address{
 	border:solid 2px #999;
-	padding-bottom: 10px;
-	margin-bottom: 5px;
-	margin-right:auto;
-	margin-left:auto;
 	width:80%;
 }
 .money{
@@ -29,6 +25,12 @@
 	margin-top: 15px;
 	padding-bottom: 15px;
 	border-bottom:solid 2px #999;
-	margin-right:auto;
-	margin-left: auto;
+}
+
+.select-left{
+	padding-top: 20px;
+}
+
+.select-right{
+	padding-bottom: 20px;
 }
