--- a/app/views/clients/orders/buy.html.erb
+++ b/app/views/clients/orders/buy.html.erb
@@ -1,10 +1,10 @@
-<div class="all_buy">
+<div class="title">
 
-<h2>注文内容の確認・編集</h2>
+<h2 class="space">注文内容の確認・編集</h2>
 
 <div class="container">
 		<div class="row address">
-			<div class="col-lg-8">
+			<div class="col-lg-8 select-left">
 				<h4>お届け先住所</h4>
 				<!--clientの自宅住所選択用のラジオボタンを設置-->
 				<%= form_for Order.new, url: clients_order_purchase_path do |f| %>
@@ -30,7 +30,7 @@
 				<div><%= link_to "新規住所追加登録はこちら", new_clients_client_path, class:"btn btn-success" %></div>
 
 				<!--支払い方法選択用のラジオボタンを設置-->
-				<h4>お支払い方法</h4>
+				<h4 class="line-height">お支払い方法</h4>
 				<div class="btn-group"  data-toggle="buttons">
 					<label class="btn btn-primary active">
 						<%= f.radio_button :payment, 0, checked: "checked" %>クレジット
@@ -43,7 +43,7 @@
 					</label>
 				</div>
 			</div>
-			<div class="col-lg-4">
+			<div class="col-lg-4 select-right">
 				<div class="money">
 					<h4>注文内容</h4>
 					<p>商品の小計:<%= "￥" + (@total_price*1.08).floor.to_s %></p>
@@ -51,13 +51,11 @@
 					<p>注文合計:<%= "￥" + (@total_price*1.08 + 500).floor.to_s %></p>
 					<p>ご請求額:<%= "￥" + (@total_price*1.08 + 500).floor.to_s %></p>
 				</div>
-					<%= f.submit "注文を確定する", class:"btn btn-info btn-lg" %>
+					<%= f.submit "注文を確定する", class:"btn btn-info" %>
 					<% end %>
 			</div>
 		</div>
-</div>
 
-<div class="container">
 <% @items.each do |item| %>
 <div class="row item way">
 <div class="col-lg-3">
@@ -110,4 +108,5 @@ $('.two').on('click', function(){
 		<%= image_tag "arrow.png"  %>
 	</a>
 </span>
-</div></div>
+</div>
+</div>
