--- a/app/views/clients/orders/index.html.erb
+++ b/app/views/clients/orders/index.html.erb
@@ -1,4 +1,6 @@
-<h1>注文履歴一覧</h1>
+<div class="title">
+
+<h2>注文履歴一覧</h2>
 
 <div class="container">
 	<div class="row">
@@ -52,3 +54,5 @@
 		<%= image_tag "arrow.png"  %>
 	</a>
 </span>
+
+</div>
