--- a/app/views/clients/orders/show.html.erb
+++ b/app/views/clients/orders/show.html.erb
@@ -1,4 +1,6 @@
-<h1>注文履歴詳細</h1>
+<div class="title">
+
+<h2 class="space">注文履歴詳細</h2>
 <%= attachment_image_tag @item.cd, :image, fallback:"no_image.png", size:"300x300" %>
 <table border = "1">
 	<tr>
@@ -13,15 +15,17 @@
 		<td><%= @item.cd.name %></td>
 		<td><%= "￥" + (@item.purchased_price * @item.quantity).to_s %></td>
 		<td><%= @item.order.shipping_address %></td>
-		<td><%= @item.order.shipment_status %>
+		<td><%= @item.order.shipment_status %></td>
 	</tr>
 </table>
 
 <div>
-	<p>アーティスト名:<%= @item.cd.artist.artist_name %></p>
-	<p>シングル/アルバム名:<%= @item.cd.name %></p>
-	<p>レーベル名:<%= @item.cd.label.label_name %></p>
-	<p>ジャンル名:<%= @item.cd.genre.genre_name %></p>
-	<p>在庫:<%= @item.cd.stock %></p>
-	<p>ステータス(販売中・販売停止中):<%= @item.cd.sale_status %></p>
+	<h4>アーティスト名:<%= @item.cd.artist.artist_name %></h4>
+	<h4>シングル/アルバム名:<%= @item.cd.name %></h4>
+	<h4>レーベル名:<%= @item.cd.label.label_name %></h4>
+	<h4>ジャンル名:<%= @item.cd.genre.genre_name %></h4>
+	<h4>在庫:<%= @item.cd.stock %></h4>
+	<h4>ステータス(販売中・販売停止中):<%= @item.cd.sale_status %></h4>
+</div>
+
 </div>
