client-view rework

--- a/app/assets/stylesheets/clients/clients.scss
+++ b/app/assets/stylesheets/clients/clients.scss
@@ -10,3 +10,51 @@
 .btn{
 	color:#fff;
 }
+
+.text-fields-box{
+	margin: 10px 0 10px 30px;
+	font-size: 18px;
+	text-align: left;
+}
+
+.info-items{
+	margin: 10px 0 10px 30px;
+}
+
+.text-field{
+	background-color: #f8f8ff;
+}
+
+.client-update-botton{
+	width: 40%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 30px;
+}
+
+.add-address-info{
+	text-align: center;
+	margin-top: 50px;
+	font-size: 30px;
+}
+
+.client-select{
+	margin: 0 15px;
+	display: inline-block;
+}
+
+.select-box{
+	width: 60%;
+	margin-bottom: 40px;
+	margin-top: 30px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.client-info-1{
+	margin: 15px;
+}
+
+.name{
+	margin-right: 5px;
+}
