--- a/app/views/clients/clients/new.html.erb
+++ b/app/views/clients/clients/new.html.erb
@@ -1,18 +1,28 @@
-<div class="big-box">
-	<div>
-		<div class="title">
-			<h2>住所新規登録</h2>
-			<%= flash[:danger] %>
-			<%= form_for @address, :url => {:action => :create} do |f| %>
-				<h4>氏名</h4>
-				<div>
-				<%= f.text_field :last_name %><%= f.text_field :first_name %>
-				<h4>郵便番号(半角英数字 ハイフンあり)</h4>
-				<%= f.text_field :sub_post_code %>
-				<h2>住所</h2>
-				<%= f.text_area :sub_address %>
-				<%= f.submit "追加" %>
-			<% end %>
+<div class="title">
+	<h2 class="client-info-1">住所新規登録</h2>
+	<%= flash[:danger] %>
+	<%= form_for @address, :url => {:action => :create} do |f| %>
+		<div class="info-items">
+			<h4>・氏名</h4>
+			<div class="text-fields-box">
+				<%= f.text_field :last_name, :size=>"10", class: "text-field name"  %><%= f.text_field :first_name, :size=>"10", class: "text-field name"  %>
+			</div>
+		</div>
+		<div class="info-items">
+			<h4>・郵便番号(半角英数字 ハイフンあり)</h4>
+			<div class="text-fields-box">
+				<%= f.text_field :sub_post_code, :size=>"20", class: "text-field"  %>
+			</div>
+		</div>
+		<div class="info-items">
+			<h4>・住所</h4>
+			<div class="text-fields-box">
+				<%= f.text_field :sub_address, :size=>"60", class: "text-field"  %>
+			</div>
+		</div>
+		<div class="client-update-botton">
+			<%= f.submit "追加", class: "btn btn-primary btn-lg btn-block" %>
 		</div>
 	</div>
+	<% end %>
 </div>
