--- a/app/views/clients/clients/edit.html.erb
+++ b/app/views/clients/clients/edit.html.erb
@@ -2,12 +2,15 @@
 <h1>Mypage編集</h1>
 
 <%= form_for @client, :url => {:controller => :clients, :action => :update } do |f| %>
-<% if @client.errors.any? %>
-	<%= @client.errors.count %>件のエラーが発生しました
-	<% @client.errors.full_messages.each do |message| %>
-		<%= message %>
+	<% if @client.errors.any? %>
+	  <div id="error_explanation" class="alert alert-danger">
+	    <ul>
+	      <% @client.errors.full_messages.each do |message| %>
+	        <li><%= message %></li>
+	      <% end %>
+	    </ul>
+	  </div>
 	<% end %>
-<% end %>
 <h3>氏名(漢字)
 <%= f.text_field :last_name, class:"info-text" %> <%= f.text_field :first_name, class:"info-text" %></h3>
 <h3>氏名(カナ)
