--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
       <div class="container">
         <nav class="nav navbar-nav navbar-left">
           <div class="logo_name"><%= image_tag "logo2_nagareco.png" %></div>
+          <div class="about">長野県出身アーティストを集めたECサイト</div>
         </nav>
         <ul class="nav navbar-nav navbar-right">
           <% if admin_signed_in? %>
