--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
           <% elsif client_signed_in? %>
             <li>
               <%= search_form_for @search, url: clients_cds_search_path do |f| %>
-              <li><%= f.text_field :name_or_artist_artist_name_cont ,placeholder: '商品名、アーティスト名で検索', size: "40*40", required: true %><%= f.submit("検索") %></li>
+              <li><%= f.text_field :name_or_artist_artist_name_cont ,placeholder: '商品名、アーティスト名で検索', size: "40*40", required: true, :size => "25*32",class:"info-text" %><%= f.submit("検索") %></li>
               <% end %>
             </li>
             <li>
