--- a/app/views/clients/clients/new.html.erb
+++ b/app/views/clients/clients/new.html.erb
@@ -1,5 +1,5 @@
 <div class="title">
-	<h2 class="client-info-1">住所新規登録</h2>
+	<h2 class="space">住所新規登録</h2>
 	<%= flash[:danger] %>
 	<%= form_for @address, :url => {:action => :create} do |f| %>
 		<div class="info-items">
