--- a/app/views/clients/clients/show.html.erb
+++ b/app/views/clients/clients/show.html.erb
@@ -1,6 +1,6 @@
 <div class="title">
 
-	<h2 class="client-info-1">マイページ<%= flash[:client_update] %></h2>
+	<h2 class="space">マイページ<%= flash[:client_update] %></h2>
 		<%= flash[:client_update] %>
 	<div class="info-items">
 		<h4>・氏名</h4>
