--- a/app/views/clients/cds/index.html.erb
+++ b/app/views/clients/cds/index.html.erb
@@ -22,7 +22,7 @@
 	<p>長野県出身アーティストを集めたECサイト</p>
 </div>
 
-<h2 class="genre_name">ジャンル</h2>
+<h2 class="genre_name">オールジャンル</h2>
 <ul class="bxslider">
 	<% @cds.each do |cd| %>
 		<li class="object">
