--- a/app/views/clients/clients/edit.html.erb
+++ b/app/views/clients/clients/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="title">
 
-	<h2 class="client-info-1">ユーザ情報編集</h2>
+	<h2 class="space">ユーザ情報編集</h2>
 	<%= form_for @client, :url => {:controller => :clients, :action => :update } do |f| %>
 		<div class="info-items">
 			<h4>・氏名(漢字)</h4>
