--- a/app/views/clients/orders/index.html.erb
+++ b/app/views/clients/orders/index.html.erb
@@ -1,6 +1,6 @@
 <div class="title">
 
-<h2>注文履歴一覧</h2>
+<h2 class="space">注文履歴一覧</h2>
 
 <div class="container">
 	<div class="row">
@@ -42,12 +42,10 @@
 
 	<% end %>
 </table>
-</div>
-</div>
 
 
 
-<h2>総計金額      ￥<%= @total_price %></h2>
+<h2 class="space">総計金額 ￥<%= @total_price %></h2>
 
 <span id="back">
 	<a href="#">
@@ -55,4 +53,6 @@
 	</a>
 </span>
 
+</div>
+</div>
 </div>
