--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
 <div id="loader-bg">
     <div id="loading">
-        <%= image_tag "logo2_nagareco.png" %>
+        <%= image_tag "logo_nagareco.png" %>
     </div>
 </div>
 
@@ -19,7 +19,7 @@
     <header class="navbar navbar-default">
       <div class="container">
         <nav class="nav navbar-nav navbar-left">
-          <div class="logo_name"><%= image_tag "logo2_nagareco.png" %></div>
+          <div class="logo_name"><%= image_tag "logo_nagareco.png" %></div>
           <div class="about">長野県出身アーティストを集めたECサイト</div>
         </nav>
         <ul class="nav navbar-nav navbar-right">
@@ -74,7 +74,7 @@
               <%= link_to "ログイン", new_client_session_path %>
             </li>
             <li>
-              <%= link_to "サインアップ", new_client_registration_path %>
+              <%= link_to "新規登録", new_client_registration_path %>
             </li>
 
           <% end %>
