--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -233,6 +233,10 @@ element.style{
   text-align: center;
 }
 
+.center-sign{
+  margin-left: 150px;
+}
+
 h2.space2{
   margin: 3px 0px 3px 0px;
 }
