--- a/app/views/clients/cds/search.html.erb
+++ b/app/views/clients/cds/search.html.erb
@@ -1,21 +1,19 @@
-<h1>検索結果</h1>
-
-<% @search_cds.each do |cd| %>
-
-  <%= link_to clients_cd_path(cd.id) do %>
-	<%= attachment_image_tag cd, :image, :fill, 40, 40, format: 'jpeg' ,fallback: "noimage.jpg" ,:size =>'40x40' %>
-  <% end %>
-
-  <p><%= link_to cd.name, clients_cd_path(cd.id) %></p>
-  <p><%= cd.artist.artist_name %></p>
-  <p>¥<%= cd.price %></p>
-
-<% end %>
-
-<%= paginate @search_cds %>
-
-<span id="back">
-	<a href="#">
-		<%= image_tag "arrow.png"  %>
-	</a>
-</span>
+<div class="title">
+	<h2 class="space">検索結果</h2>
+	<% @search_cds.each do |cd| %>
+	<%= link_to clients_cd_path(cd.id) do %>
+	<%= attachment_image_tag cd, :image, :fill, 40, 40, format: 'jpeg' ,fallback: "noimage.jpg" ,:size =>'100x100' %>
+    <% end %>
+    <div class="show-info">
+    	<%= link_to cd.name, clients_cd_path(cd.id) %>
+    	<%= cd.artist.artist_name %>
+    	¥<%= cd.price %>
+    <% end %>
+    <%= paginate @search_cds %>
+    </div>
+    <span id="back">
+    	<a href="#">
+    		<%= image_tag "arrow.png"  %>
+	    </a>
+    </span>
+</div>
