--- a/app/views/clients/clients/new.html.erb
+++ b/app/views/clients/clients/new.html.erb
@@ -5,19 +5,19 @@
 		<div class="info-items">
 			<h4>・氏名</h4>
 			<div class="text-fields-box">
-				<%= f.text_field :last_name, :size=>"10", class: "text-field name"  %><%= f.text_field :first_name, :size=>"10", class: "text-field name"  %>
+				<%= f.text_field :last_name, :size=>"10", placeholder:"姓", class: "text-field name" %><%= f.text_field :first_name, :size=>"10", placeholder:"名", class: "text-field name" %>
 			</div>
 		</div>
 		<div class="info-items">
-			<h4>・郵便番号(半角英数字 ハイフンあり)</h4>
+			<h4>・郵便番号</h4>
 			<div class="text-fields-box">
-				<%= f.text_field :sub_post_code, :size=>"20", class: "text-field"  %>
+				<%= f.text_field :sub_post_code, :size=>"25", placeholder:"半角英数字　ハイフンあり", class: "text-field" %>
 			</div>
 		</div>
 		<div class="info-items">
 			<h4>・住所</h4>
 			<div class="text-fields-box">
-				<%= f.text_field :sub_address, :size=>"60", class: "text-field"  %>
+				<%= f.text_field :sub_address, :size=>"60", class: "text-field" %>
 			</div>
 		</div>
 		<div class="client-update-botton">
