--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -214,6 +214,7 @@ element.style{
   width: 80%;
   margin-right: auto;
   margin-left: auto;
+  margin-bottom: 30px;
 }
 
 .title2{
@@ -228,6 +229,7 @@ element.style{
   margin: auto;
   width: 45%;
 }
+
 
 .center{
   text-align: center;
