--- a/app/views/clients/orders/show.html.erb
+++ b/app/views/clients/orders/show.html.erb
@@ -22,12 +22,12 @@
 	                </tr>
       			</table>
       			<div class="orders-show">
-      				<h4 class="orders-text">アーティスト名:<%= @item.cd.artist.artist_name %></h4>
-					<h4 class="orders-text">シングル/アルバム名:<%= @item.cd.name %></h4>
-					<h4 class="orders-text">レーベル名:<%= @item.cd.label.label_name %></h4>
-					<h4 class="orders-text">ジャンル名:<%= @item.cd.genre.genre_name %></h4>
-					<h4 class="orders-text">在庫:<%= @item.cd.stock %></h4>
-					<h4 class="orders-text">ステータス(販売中・販売停止中):<%= @item.cd.sale_status %></h4>
+      				<h4>アーティスト名:<%= @item.cd.artist.artist_name %></h4>
+					<h4>シングル/アルバム名:<%= @item.cd.name %></h4>
+					<h4>レーベル名:<%= @item.cd.label.label_name %></h4>
+					<h4>ジャンル名:<%= @item.cd.genre.genre_name %></h4>
+					<h4>在庫:<%= @item.cd.stock %></h4>
+					<h4>ステータス:<%= @item.cd.sale_status %></h4>
 				</div>
 			</div>
 		</div>
