--- a/app/assets/stylesheets/admins/cds.scss
+++ b/app/assets/stylesheets/admins/cds.scss
@@ -140,8 +140,10 @@
 }
 
 .edit-botton-box{
-	width: 60%;
+	width: 40%;
 	margin: 0 auto;
+	margin-top: 30px;
+	margin-bottom: 20px;
 }
 
 .edit-botton{
