--- a/app/views/admins/cds/index.html.erb
+++ b/app/views/admins/cds/index.html.erb
@@ -21,7 +21,7 @@
 	</ul>
 </div>
 
-<h2 class="genre_name">ジャンル</h2>
+<h2 class="genre_name">オールジャンル</h2>
 <ul class="bxslider">
 	<% @cds.each do |cd| %>
 		<li class="object">
