--- a/app/views/admins/clients/edit.html.erb
+++ b/app/views/admins/clients/edit.html.erb
@@ -1,27 +1,53 @@
 <div class="title">
 	<h2 class="space">顧客編集</h2>
 	<%= form_for @client, :url => {:controller => :clients, :action => :update } do |f| %>
-	<% if @client.errors.any? %>
-	  <div id="error_explanation" class="alert alert-danger">
-	    <ul>
-	      <% @client.errors.full_messages.each do |message| %>
-	        <li><%= message %></li>
-	      <% end %>
-	    </ul>
-	  </div>
-	<% end %>
-	<h4>氏名(漢字)
-	<%= f.text_field :last_name, class:"info-text" %> <%= f.text_field :first_name, class:"info-text" %></h4>
-	<h4>氏名(カナ)
-	<%= f.text_field :last_name_kana, class:"info-text" %> <%= f.text_field :first_name_kana, class:"info-text"%></h4>
-	<h4>メールアドレス
-	<%= f.email_field :email, class:"info-text" %></h4>
-	<h4>電話番号
-	<%= f.text_field :telephone, class:"info-text" %></h4>
-	<h4>自宅郵便番号
-	<%= f.text_field :post_code, class:"info-text" %></h4>
-	<h4>自宅住所
-	<%= f.text_field :address, class:"info-text" %></h4>
-	<h4><%= f.submit '編集', class:"btn btn-info" %></h4>
+		<% if @client.errors.any? %>
+			<div id="error_explanation" class="alert alert-danger">
+				<ul>
+			      <% @client.errors.full_messages.each do |message| %>
+			      	<li><%= message %></li>
+			      <% end %>
+			    </ul>
+			</div>
+		 <% end %>
+		<div class="info-items">
+		 	<h4>・氏名(漢字)</h4>
+		 	<div class="text-fields-box">
+				<%= f.text_field :last_name, :size=>"10", class: "text-field" %> <%= f.text_field :first_name, :size=>"10", class: "text-field" %>
+			</div>
+		</div>
+		<div class="info-items">
+			<h4>・氏名(カナ)</h4>
+			<div class="text-fields-box">
+				<%= f.text_field :last_name_kana, class: "text-field" %><%= f.text_field :first_name_kana, class: "text-field"%>
+			</div>
+		</div>
+		<div class="info-items">
+			<h4>・メールアドレス</h4>
+			<div class="text-fields-box">
+				<%= f.email_field :email, :size=>"60", class: "text-field" %>
+			</div>
+		</div>
+		<div class="info-items">
+			<h4>・電話番号</h4>
+			<div class="text-fields-box">
+				<%= f.text_field :telephone, :size=>"40", class: "text-field" %>
+			</div>
+		</div>
+		<div class="info-items">
+		<h4>・自宅郵便番号</h4>
+			<div class="text-fields-box">
+				<%= f.text_field :post_code, :size=>"20", class: "text-field" %>
+			</div>
+		</div>
+		<div class="info-items">
+			<h4>・自宅住所</h4>
+			<div class="text-fields-box">
+				<%= f.text_field :address, :size=>"60", class: "text-field" %>
+			</div>
+		</div>
+		<div class="client-update-botton">
+			<%= f.submit '編集', class: "btn btn-primary btn-lg btn-block"  %>
+		</div>
 	<% end %>
 </div>
