--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -239,17 +239,18 @@ element.style{
   margin-left: 150px;
 }
 
-h2.space2{
+.space2{
   margin: 3px 0px 3px 0px;
 }
 
-h2.space{
+.space{
   line-height: 1;
   margin-top: 50px;
   margin-bottom: 10px;
+  font-weight: bold;
 }
 
-h4.line-height{
+.line-height{
   line-height: 2;
 }
 
