--- a/app/assets/stylesheets/clients/items.scss
+++ b/app/assets/stylesheets/clients/items.scss
@@ -1,4 +1,4 @@
-// Place all the styles related to the clients/items controller here.
+// Place all the styles related to the clients/items-button controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
@@ -22,4 +22,8 @@
 
 .tab_bottom{
 	margin-bottom: 20px;
+}
+
+.button{
+	margin-top: 10px;
 }
