--- a/app/views/admins/clients/show.html.erb
+++ b/app/views/admins/clients/show.html.erb
@@ -1,6 +1,6 @@
 <div class="big-box">
 	<div>
-		<div class="title4">
+		<div class="title">
 				<h2 class="space">顧客詳細</h2>
 				<div class="client-show-box">
 
