--- a/app/views/admins/orders/index.html.erb
+++ b/app/views/admins/orders/index.html.erb
@@ -2,13 +2,13 @@
 	<h2 class="space">購入履歴一覧(全顧客)</h2>
 	<table border = "1">
 		<tr align = "center">
-			<td>購入者</td>
+			<td width="100">購入者</td>
 		    <td>購入日</td>
-		    <td>CD名</td>
+		    <td width="200">CD名</td>
 		    <td>購入枚数</td>
-		    <td>小計</td>
+		    <td width="90">小計</td>
 		    <td>購入価格総計</td>
-		    <td>送付先</td>
+		    <td width="300">送付先</td>
 		    <td>ステータス</td>
 	    </tr>
 
