--- a/app/views/clients/cds/show.html.erb
+++ b/app/views/clients/cds/show.html.erb
@@ -3,11 +3,9 @@
         <div class="show-items">
                 <div class="show-items row">
                         <div class="col-sm-5">
-                                <div class="show-item">
                                         <%= attachment_image_tag @cd, :image, :fill, 400, 400, format: 'jpeg' ,fallback: "noimage.jpg" ,:size =>'400x400', class: "image" %>
-                                </div>
                                 <div class="show-item">
-                                        <h4>説明文</h4>
+                                        <h4 class="subject-bar">説明文</h4>
                                         <div class="show-info-item">
                                                 <%= @cd.description %>
                                         </div>
@@ -15,19 +13,19 @@
                         </div>
                         <div class="col-sm-7 show-box2">
                                 <div class="show-item">
-                                        <h4>アーティスト名</h4>
+                                        <h4 class="subject-bar">アーティスト名</h4>
                                         <div class="show-info-item">
                                                 <%= @cd.artist.artist_name %>
                                         </div>
                                 </div>
-                                <div class="show--item">
-                                        <h4>CD名</h4>
+                                <div class="show-item">
+                                        <h4 class="subject-bar">CD名</h4>
                                         <div class="show-info-item">
                                                 <%= @cd.name %>
                                         </div>
                                 </div>
                                 <div class="show-item">
-                                        <h4>曲名</h4>
+                                        <h4 class="subject-bar">曲名</h4>
                                         <div class="show-info-item">
                                                 <% @cd.discs.each do |disc| %>
                                                          <div>
@@ -43,19 +41,19 @@
                                         </div>
                                 </div>
                                 <div class="show-item">
-                                        <h4>ジャンル</h4>
+                                       <h4 class="subject-bar">ジャンル</h4>
                                         <div class="show-info-item">
                                                 <%= @cd.genre.genre_name %>
                                         </div>
                                 </div>
                                 <div class="show-item">
-                                        <h4>レーベル名</h4>
+                                        <h4 class="subject-bar">レーベル名</h4>
                                         <div class="show-info-item">
                                                 <%= @cd.label.label_name %>
                                         </div>
                                 </div>
                                 <div class="show-item">
-                                        <h4>在庫</h4>
+                                        <h4 class="subject-bar">在庫</h4>
                                         <div class="show-info-item">
                                                 <% if @cd.stock <= 0 %>
                                                 <%= "✖" %>
@@ -65,7 +63,7 @@
                                          </div>
                                  </div>
                                  <div class="show-item">
-                                        <h4>ステータス</h4>
+                                        <h4 class="subject-bar">ステータス</h4>
                                         <div class="show-info-item">
                                                 <% if @cd.stock <= 0 %>
                                                 <%= "販売停止" %>
@@ -75,13 +73,13 @@
                                         </div>
                                  </div>
                                  <div class="show-item">
-                                        <h4>税込価格</h4>
+                                        <h4 class="subject-bar">税込価格</h4>
                                         <div class="show-info-item">
                                                 <%= (@cd.price*1.08).floor %>
                                         </div>
                                 </div>
                                 <div class="show-item">
-                                        <h4>購入枚数</h4>
+                                        <h4 class="subject-bar">購入枚数</h4>
                                         <div class="show-info-item">
                                                 <%= form_for @item, url: clients_items_add_item_path do |f| %>
                                                 <%= f.hidden_field :cd_id, value: params[:id] %>
