[edit_error_messages]

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -237,3 +237,12 @@ td{
   line-height: 25px;
   margin-top: 20px;
 }
+
+.flash{
+  font-size: 18px;
+  color: red;
+}
+
+.login-status{
+  font-size: 16px;
+}
