--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
             <li>
               <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
             </li>
-            <div class="text-right">管理者でログイン中</div>
+            <div class="text-right login-status">管理者でログイン中</div>
 
           <% elsif client_signed_in? %>
             <li>
@@ -59,7 +59,7 @@
             <li>
               <%= link_to "ログアウト", destroy_client_session_path, method: :delete %>
             </li>
-            <div class="text-right"><%= current_client.last_name + current_client.first_name %>でログイン中</div>
+            <div class="text-right login-status"><%= current_client.last_name + current_client.first_name %>でログイン中</div>
 
           <% else %>
             <li>
@@ -84,7 +84,7 @@
 
       <div class="box"></div>
       <% if flash[:notice] %>
-      <div class="flash"><%= flash[:notice] %></div>
+      <div class="flash title"><%= flash[:notice] %></div>
       <% end %>
 
     <%= yield %>
