--- a/app/views/clients/orders/purchase.html.erb
+++ b/app/views/clients/orders/purchase.html.erb
@@ -1,3 +1,4 @@
 <div class="title">
-<h2 class="space">購入完了しました</h2>
+	<%= image_tag 'buy.jpeg', :size => '150x150', class: "buy-image" %>
+	<div class="hit-the-floor">購入ありがとうございました</div>
 </div>
