--- a/app/views/clients/orders/purchase.html.erb
+++ b/app/views/clients/orders/purchase.html.erb
@@ -1,4 +1,3 @@
 <div class="title">
-	<%= image_tag 'buy.jpeg', :size => '150x150', class: "buy-image" %>
-	<div class="hit-the-floor">購入ありがとうございました</div>
+	<div class="hit-the-floor">ご購入ありがとうございました</div>
 </div>
