--- a/app/assets/stylesheets/clients/orders.scss
+++ b/app/assets/stylesheets/clients/orders.scss
@@ -37,7 +37,23 @@
 .orders-show{
 	margin-top: 10px;
 }
+@-webkit-keyframes typing { from { width: 0; } }
+@-webkit-keyframes blink-caret { 50% { border-color: transparent; } }
 
-.purchase{
-	margin: 50px;
+.hit-the-floor{
+	font: bold 300% Consolas, Monaco, monospace;
+	border-right: .1em solid black;
+	width: 14.5em;
+	margin: 2em 1em;
+	white-space: nowrap;
+	overflow: hidden;
+	-webkit-animation: typing 7s steps(21, end),
+	  blink-caret .5s step-end infinite alternate;
+	margin-top: 50px;
+  font-size: 70px;
+  color: #99e8ad;
+  font-weight: bold;
+  font-family: Helvetica;
+  text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15);
 }
