--- a/app/views/clients/orders/purchase.html.erb
+++ b/app/views/clients/orders/purchase.html.erb
@@ -1,3 +1,69 @@
 <div class="title">
-	<div class="hit-the-floor">ご購入ありがとうございました</div>
+	<div class="hit-the-floor">　　ご購入ありがとうございました</div>
 </div>
+
+<!-- <script>
+	$(function(){
+		$(document).snowfall({
+		flakeCount:3,
+		flakeIndex:-1,
+		minSize:30,
+		maxSize:50,
+		image:"/assets/onpu.png"
+	});
+	});
+	$(function(){
+		$(document).snowfall({
+		flakeCount:3,
+		flakeIndex:-1,
+		minSize:30,
+		maxSize:50,
+		image:"/assets/onpu1.png"
+	});
+	});
+	$(function(){
+		$(document).snowfall({
+		flakeCount:3,
+		flakeIndex:-1,
+		minSize:30,
+		maxSize:50,
+		image:"/assets/onpu2.png"
+	});
+	});
+	$(function(){
+		$(document).snowfall({
+		flakeCount:3,
+		flakeIndex:-1,
+		minSize:30,
+		maxSize:50,
+		image:"/assets/onpu3.png"
+	});
+	});
+	$(function(){
+		$(document).snowfall({
+		flakeCount:3,
+		flakeIndex:-1,
+		minSize:30,
+		maxSize:50,
+		image:"/assets/onpu4.png"
+	});
+	});
+	$(function(){
+		$(document).snowfall({
+		flakeCount:3,
+		flakeIndex:-1,
+		minSize:30,
+		maxSize:50,
+		image:"/assets/onpu5.png"
+	});
+	});
+	$(function(){
+		$(document).snowfall({
+		flakeCount:3,
+		flakeIndex:-1,
+		minSize:30,
+		maxSize:50,
+		image:"/assets/onpu6.png"
+	});
+	});
+</script> -->
