--- a/app/views/clients/cds/show.html.erb
+++ b/app/views/clients/cds/show.html.erb
@@ -84,7 +84,7 @@
                                                 <%= form_for @item, url: clients_items_add_item_path do |f| %>
                                                 <%= f.hidden_field :cd_id, value: params[:id] %>
                                                 <%= f.number_field :quantity, required:true, min:"1" %>
-                                                <%= f.submit "カート追加" %>
+                                                <%= f.submit "カート追加", class:"btn btn-info" %>
                                                 <% end %>
                                         </div>
                                 </div>
