--- a/app/views/admins/cds/_song_fields.html.erb
+++ b/app/views/admins/cds/_song_fields.html.erb
@@ -1,5 +1,5 @@
 	<tr class="nested-fields my-wrapper-class">
-		<td class="nested-song-td"><%= f.number_field :song_number, class:"disc-table1 info-text" %></td>
+		<td class="nested-song-td"><%= f.number_field :song_number, class:"disc-table1 info-text", min:"1",max:"30" %></td>
 		<td><%= f.text_field :song_name,class:"disc-table2 info-text" %></td>
 		<td><%= link_to_remove_association('曲削除', f, { wrapper_class: 'my-wrapper-class' , class: "btn btn-danger btn-xs"})%></td>
 	</tr>
