--- a/app/views/admins/orders/index.html.erb
+++ b/app/views/admins/orders/index.html.erb
@@ -49,4 +49,7 @@
 		<a href="#">
 			<%= image_tag "arrow.png"  %></a>
 	</span>
+	<div class="kaminari-page">
+		<%= paginate @orders %>
+	</div>
 </div>
