--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -288,3 +288,15 @@ td{
   margin-right: auto;
   margin-left: auto;
 }
+
+.kaminari-page{
+  font-size: 30px;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-left: auto;
+  max-width: 60%;
+}
+
+
+
+
