--- a/app/views/admins/clients/index.html.erb
+++ b/app/views/admins/clients/index.html.erb
@@ -5,7 +5,9 @@
 			<h4 class="client-man"><%= client.id %> . <%= link_to (client.last_name + client.first_name), admins_client_path(client.id) %></h4>
 		<% end %>
 	</div>
+	<div class="kaminari-page">
 		<%= paginate @clients %>
+	</div>
 	<span id="back">
 		<a href="#">
 			<%= image_tag "arrow.png"  %>
